# generic_launcher

./: .gitignore  Cargo.toml  README.md  install.sh  launcher.css
assets/Adwaita/: index.theme
misc/: camera_launcher.desktop
src/: hyprland_features.rs  main.rs  search.rs  search_buffer_imp.rs  search_result_box_impl.rs  xdg_desktop_entry.rs
src/application_window/: event_handler.rs  initialize_widgets.rs  mod.rs
src/gobject/: clock_widget.rs  mod.rs  result_box_container.rs  scroll_bar.rs  search_entry.rs  search_entry_buffer.rs  search_entry_im_context.rs  search_result_box.rs
src/launcher/: clock.rs  launcher.rs  mod.rs  state.rs
src/search/: mod.rs  search.rs  search_context.rs
src/user_config/: application_settings.rs  keyboard_mode.rs  mod.rs  user_config.rs
src/utils/: hot_reload.rs  mod.rs
src/xdg_desktop_entry/: mod.rs  xdg_desktop_entry.rs
