[package]
name = "custom_status_bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"
gtk4-layer-shell = "0.2.0"
gdk = { package = "gdk4", version = "0.7" }
gtk = { package = "gtk4", version = "0.7" }
gio = "0.18"
glib = "0.19.0"
glib-sys = "0.19.0"
shortcutd = "0.2.0"