[package]
name = "generic_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4-layer-shell = "0.2.0"
gdk = { package = "gdk4", version = "0.7" }
gtk = { package = "gtk4", version = "0.7" }
gio = "0.18"
glib = "0.19.0"
glib-sys = "0.19.0"
chrono = "0.4.33"
inotify = "0.10.2"
libc = "0.2.153"
lazy_static = "1.4.0"
