[package]
name = "generic_launcher"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk4-layer-shell = "0.6.3"
gdk = { package = "gdk4", version = "0.10.1" }
gtk = { package = "gtk4", features=["v4_12"], version = "0.10.1" }
gtk4-sys = { version = "0.10.1" }

gio = "0.21.4"
glib = "0.21.4"
glib-sys = "0.19.0"
chrono = "0.4.33"
inotify = "0.10.2"
libc = "0.2.153"
lazy_static = "1.4.0"
tokio = { version = "1", features = [
    "macros",
    "io-std",
    "rt-multi-thread",
    "time",
] }
toml = "0.9.8"